refactor: Clean up code, remove unused assets, and update documentation
- Remove superfluous comments from app.py
- Delete redundant or useless files
- Improve markdown formatting in EDA.ipynb and datacreation.ipynb
- Update the main README file

--- a/notebooks/Data_creation_and_preprocessing.ipynb
+++ b/notebooks/Data_creation_and_preprocessing.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "10ab663d-a61f-43ea-9866-f0e14a0b2d93",
+   "metadata": {},
+   "source": [
+    "# Student Data Creation and Initial Preprocessing\n",
+    "\n",
+    "**Objective:** This notebook outlines the process for generating a large-scale synthetic dataset simulating student attributes relevant to predicting dropout in Indian government schools. The aim is to create a foundational dataset for subsequent exploratory data analysis (EDA), feature engineering, and model development.\n",
+    "\n",
+    "**Process Overview:**\n",
+    "1.  Define the schema and characteristics for student data, drawing inspiration from common educational datasets (e.g., UDISE+) and domain knowledge.\n",
+    "2.  Programmatically generate synthetic records (e.g., 3 million students).\n",
+    "3.  Introduce controlled variations and relationships between features to mimic real-world scenarios.\n",
+    "4.  Perform very basic data cleaning (e.g., type conversions, renaming columns for consistency).\n",
+    "5.  Save the generated raw dataset (`synthetic_student_data_combined.csv`) for more detailed exploration and preprocessing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "85309aea-6267-4472-924e-8057ae714191",
@@ -1492,6 +1509,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70b16b06-8011-49c4-8a76-f66e8e680ceb",
+   "metadata": {},
+   "source": [
+    "## 🧬 Generating Synthetic Student Records\n",
+    "\n",
+    "This section details the generation of the synthetic student dataset. We simulate various features categorized into demographics, academic performance, socio-economic factors, and school-related attributes. The `dropout` target variable is also generated, with its likelihood influenced by a combination of these factors.\n",
+    "\n",
+    "**Key Features Being Generated (Initial Set):**\n",
+    "* **Demographics:** `student_id`, `age`, `gender`, `caste_category` (later `caste`), `father_education`, `family_income`.\n",
+    "* **Academic:** `grade`, `attendance_rate`, `grade_performance`.\n",
+    "* **School & Access:** `midday_meal` (later `midday_meal_access`), `free_uniforms` (later `free_uniform_access`), `free_textbooks` (later `free_text_books_access`), `internet_access` (later `internet_access_home`), `distance_to_school`.\n",
+    "* **Target:** `dropout`.\n",
+    "\n",
+    "* Dropout assignment incorporates rules based on simulated low attendance, poor grades, and adverse socio-economic conditions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "098cef4e-cc01-4fed-8f90-30b158ea7c5f",
@@ -2721,6 +2756,16 @@
     "print(f\"Generated a total of {overall_student_count} student records.\")\n",
     "print(f\"Data saved in chunks in directory: '{OUTPUT_DIR}'.\")\n",
     "print(f\"Total script execution time: {final_total_time:.2f} seconds ({final_total_time/60:.2f} minutes).\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aff01f1d-8d58-4a84-ad40-89bc6bac1fd5",
+   "metadata": {},
+   "source": [
+    "## 💾 Saving Raw Synthetic Dataset\n",
+    "\n",
+    "The synthetically generated and initially cleaned dataset is now saved. This dataset (`synthetic_student_data_combined.csv`) will be the input for the `EDA.ipynb` notebook, where more in-depth analysis and feature engineering will take place.\n"
    ]
   },
   {
