--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3e006bb3-3099-46d9-8884-3f65c8b252e8",
+   "metadata": {},
+   "source": [
+    "# 📊 Exploratory Data Analysis (EDA) & Feature Engineering\n",
+    "\n",
+    "**Objective:** To thoroughly analyze the synthetic student dataset (`synthetic_student_data_combined.csv`), uncover patterns and insights related to student dropout, handle missing data, and engineer new features that can improve the predictive accuracy of our machine learning models.\n",
+    "\n",
+    "**Dataset Used:** `synthetic_student_data_combined.csv` (output from `Data_creation_and_preprocessing.ipynb`).\n",
+    "\n",
+    "**Key Steps:**\n",
+    "1.  Load the dataset.\n",
+    "2.  Initial data inspection: `info()`, `describe()`, check for missing values, identify duplicates.\n",
+    "3.  **Univariate Analysis:** Examine distributions of individual features (histograms for numerical, bar plots for categorical).\n",
+    "4.  **Bivariate Analysis:**\n",
+    "    * Explore relationships between each feature and the `dropout` target (e.g., dropout rate by gender, caste, grade performance bins).\n",
+    "    * Analyze correlations between numerical features.\n",
+    "5.  **Feature Engineering:** Create new features based on domain knowledge and EDA insights.\n",
+    "6.  **Handle Missing Values:** Apply appropriate imputation techniques.\n",
+    "7.  **Scaling/Transformation (if applicable):** Apply transformations like `RobustScaler` to relevant numerical features.\n",
+    "8.  Save the final preprocessed dataset (`preprocessed_student_data.csv`) for model training."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "1a18ab6a-c6ed-43e9-989d-f7b0c4b11a77",
@@ -494,6 +518,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f801d4d2-2eb9-4910-9cd8-6c5916983a13",
+   "metadata": {},
+   "source": [
+    "## ⚖️ Feature Scaling: `infrastructure_score`\n",
+    "\n",
+    "The `infrastructure_score`  is scaled using `RobustScaler`. This scaler is less sensitive to outliers compared to `StandardScaler` or `MinMaxScaler`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "id": "59371b42-1357-40d2-a490-a15a1bdb56d7",
@@ -502,20 +536,11 @@
    "source": [
     "#  Robust Scaling then Normalize to 0-1\n",
     "\n",
-    "\n",
     "def scale_infrastructure_minmax(school_data):\n",
     "    \"\"\"\n",
     "    Applies RobustScaler to handle outliers, then normalizes the\n",
     "    'infrastructure_score' column of a DataFrame to the 0-1 range\n",
     "    using MinMaxScaler.\n",
-    "\n",
-    "    Args:\n",
-    "        school_data (pd.DataFrame): A pandas DataFrame containing\n",
-    "                                    an 'infrastructure_score' column.\n",
-    "\n",
-    "    Returns:\n",
-    "        pd.DataFrame: The DataFrame with the 'infrastructure_score'\n",
-    "                      column scaled to the 0-1 range, with outlier handling.\n",
     "    \"\"\"\n",
     "\n",
     "    # Step 1: Apply RobustScaler\n",
@@ -1262,6 +1287,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2aacd48e-69c2-4c06-9294-091ba3be3c75",
+   "metadata": {},
+   "source": [
+    "## 📈 Visualizing Data Distributions and Relationships\n",
+    "\n",
+    "Understanding the characteristics of each feature and how they relate to each other and the target variable (`dropout`) is crucial. We'll use various plots to visualize these aspects.\n",
+    "\n",
+    "**Key Observations from Visualizations:**\n",
+    "\n",
+    "* Average dropout rate is 17.6%, with higher rates among students with higher grades and ages.\n",
+    "\n",
+    "* Attendance rate and grade performance shows strong negative correlation with dropout (r = X)\n",
+    "\n",
+    "* Students with access to internet at home, having access to free uniforms, mid-day meals and short distances from school have lower dropout rates, hence the inverse relationship with dropout rate.\n",
+    "\n",
+    "* Students with family income below 3.5 lakhs have more than 5% higher dropout rates compared to higher income groups\n",
+    "\n",
+    "* Father's education has sizeable impact only after he has done higher secondary education and above\n",
+    "\n",
+    "* Difference between dropout rate of students belonging to ST and SC categories is 4% higher than those belonging to OBC and General\n",
+    "\n",
+    "* Key risk factors appear to be: Attendance rate, grade performance , age, grade ,caste, family income, infrastructure score, along with shorter distances from school, free uniforms and other such school facilities among others\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "id": "39b54113-f6c4-4fe6-bac5-4bd8e21f79c4",
@@ -1946,27 +1997,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c070c1cb-c74c-4b24-96d6-974d3e3b5619",
-   "metadata": {},
-   "source": [
-    "1. Average dropout rate is 17.6%, with higher rates among students with higher grades and ages \n",
-    "2. Attendance rate and grade performance shows strong negative correlation with dropout (r = X)\n",
-    "3. Students with access to internet at home, having access to free uniforms, mid-day meals and short distances from school have lower dropout rates, hence the inverse relationship with dropout rate.\n",
-    "4. Students with family income below 3.5 lakhs have more than 5% higher dropout rates compared to higher income groups"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "142a7802-0edf-4b83-b250-ed5423cda21b",
-   "metadata": {},
-   "source": [
-    "5. Father's education has sizeable impact only after he has done higher secondary education and above\n",
-    "6. Difference between dropout rate of students belonging to ST and SC categories is 4% higher than those belonging to OBC and General\n",
-    "7. Key risk factors appear to be: Attendance rate, grade performance , age, grade ,caste, family income, infrastructure score, along with shorter distances from school, free uniforms and other such school facilities among others"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 69,
    "id": "e4cfe9c8-074f-412d-936c-52f729dc4203",
@@ -2033,6 +2063,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "83d3af84-016e-4fca-a3fe-9c1001341adb",
+   "metadata": {},
+   "source": [
+    "### Feature Engineering: Crafting `socioeconomic_index`\n",
+    "\n",
+    "To capture a student's overall socio-economic background, we combine `family_income`, `father_education`, and `caste` into a composite `socioeconomic_index`. The rationale and calculation are as follows:\n",
+    "    df['socioeconomic_index'] = (\n",
+    "        0.5 * df['income_score_norm'] + \n",
+    "        0.15 * df['education_score_norm'] + \n",
+    "        0.35 * df['caste_score_norm']\n",
+    "    )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "id": "13dffd37-a437-4c18-a1db-a6d8f5e56167",
@@ -2084,7 +2129,6 @@
     "        df[f'{col}_norm'] = (df[col] - min_val) / (max_val - min_val)\n",
     "    \n",
     "    # Create weighted socioeconomic index\n",
-    "    # Weights based on your EDA findings - adjust as needed\n",
     "    df['socioeconomic_index'] = (\n",
     "        0.5 * df['income_score_norm'] + \n",
     "        0.15 * df['education_score_norm'] + \n",
@@ -2099,6 +2143,18 @@
     "                 'income_score_norm', 'education_score_norm', 'caste_score_norm'], axis=1)\n",
     "    \n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b241747-41bd-4853-b90e-672aa2890e19",
+   "metadata": {},
+   "source": [
+    "### Feature Engineering: Creating `school_support_score` and `accessibility_score`\n",
+    "\n",
+    "`school_support_score`: Quantifies the level of support facilities available to the student at school, based on access to midday meals, free textbooks, and free uniforms.\n",
+    "\n",
+    "`accessibility_score`: This score reflects how easily a student can access the school, primarily based on `distance_to_school`. We use an exponential decay function so that shorter distances yield higher scores.\n"
    ]
   },
   {
@@ -2405,6 +2461,18 @@
     "    \n",
     "    # Return the preprocessed dataframe\n",
     "    return combined_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69d99203-4f57-42d4-af82-e6bcbdd7296d",
+   "metadata": {},
+   "source": [
+    "## ✅ Final Preprocessed Dataset Overview\n",
+    "\n",
+    "After EDA, feature engineering, and preprocessing, the dataset is ready for model training. Here's a final look at its structure and a sample of the features.\n",
+    "\n",
+    "The preprocessed data is saved to `data/processed/preprocessed_student_data.csv`. This file will be used in the `model.ipynb` notebook."
    ]
   },
   {
@@ -2942,14 +3010,6 @@
     "preprocessed_df.to_csv('/Users/macbookpro/Desktop/POC1/data/processed/preprocessed_student_data.csv', index=False)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4255e46-a78b-4163-94bf-64b5c7eebe0b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
